SalesforceProject2/src/objects/RFP__c.object
<CustomObject>
    <fields>
        <fullName>Deadline_Approaching_Warning__c</fullName>
        <formula>Due_Date__c -  Reminder_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date on which a reminder email is sent out to the owner of this RFP warning them of the approaching deadline.</inlineHelpText>
        <label>Deadline Approaching Warning</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <inlineHelpText>Submission deadline for this document.</inlineHelpText>
        <label>Due Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Existing_Responses__c</fullName>
        <description>The number of Responses in this document that were selected from already existing Responses.</description>
        <inlineHelpText>The number of Responses in this document that were selected from already existing Responses.</inlineHelpText>
        <label>Existing Responses</label>
        <summaryFilterItems>
            <field>Question__c.Original_Response__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Question__c.RFP__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>New_Responses__c</fullName>
        <description>The number of Responses that were authored as part of this Document.</description>
        <inlineHelpText>The number of Responses that were authored as part of this document.</inlineHelpText>
        <label>New Responses</label>
        <summaryFilterItems>
            <field>Question__c.Original_Response__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Question__c.RFP__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Opportunity for this document.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>RFPs/RFIs/RFQs/SOWs</relationshipLabel>
        <relationshipName>RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFP_URL__c</fullName>
        <inlineHelpText>Links to a web site where detailed information about the RFx/SOW document may be found.</inlineHelpText>
        <label>RFP URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Reminder_Days__c</fullName>
        <defaultValue>7</defaultValue>
        <inlineHelpText>Sends a reminder notice to the RFP owner this number of days before the RFP deadline.</inlineHelpText>
        <label>Reminder: Days Prior to Deadline</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>The state of this document.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Down Selected</fullName>
                </value>
                <value>
                    <fullName>Eliminated</fullName>
                </value>
                <value>
                    <fullName>No Bid</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Responses__c</fullName>
        <formula>New_Responses__c +  Existing_Responses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total number of responses - both new responses and responses that already exist in RFPForce.</inlineHelpText>
        <label>Total Responses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Type of document which is being prepared.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RFI</fullName>
                </value>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>RFQ</fullName>
                </value>
                <value>
                    <fullName>SOW</fullName>
                </value>
                <value>
                    <fullName>FAQ</fullName>
                </value>
                <value>
                    <fullName>Untracked Proposal</fullName>
                </value>
                <value>
                    <fullName>Internal Document</fullName>
                </value>
                <value>
                    <fullName>Marketing Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>myCurrency__c</fullName>
        <description>test</description>
        <inlineHelpText>help</inlineHelpText>
        <label>myCurrency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>textfield10__c</fullName>
        <label>textfield10</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>textfield11__c</fullName>
        <label>textfield11</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>textfield12__c</fullName>
        <label>textfield12</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>RFP</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Existing_Responses__c</columns>
        <columns>New_Responses__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Total_Responses__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RFP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RFPs</pluralLabel>
    <recordTypes>
        <fullName>Closed_RFP</fullName>
        <active>true</active>
        <description>Record type representing a Closed RFP Object.</description>
        <label>Closed RFP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Open_RFP</fullName>
        <active>true</active>
        <description>Record type representing an Open RFP object.</description>
        <label>Open RFP</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Require_Opportunity_for_RFx_Documents</fullName>
        <active>false</active>
        <description>Require an Opportunity to be entered for RFIs, RFPs, RFQs, and SOWs.</description>
        <errorConditionFormula>(ISPICKVAL( Type__c , &apos;RFI&apos;) || ISPICKVAL( Type__c , &apos;RFP&apos;) ||  ISPICKVAL( Type__c , &apos;RFQ&apos;) || ISPICKVAL ( Type__c, &apos;SOW&apos;)) &amp;&amp; (Opportunity__c = null)</errorConditionFormula>
        <errorDisplayField>Opportunity__c</errorDisplayField>
        <errorMessage>RFIs, RFPs, RFQs, and SOWs require an Opportunity.</errorMessage>
    </validationRules>
</CustomObject>